# miro-ship

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  interventions.yaml  scenario_baseline.yaml  scenario_carbon_levy.yaml  scenario_methanol_supply_shock.yaml  scenario_port_delay.yaml  simulation.yaml  world_schema.yaml
data/seeds/: cargo_owners.yaml  fuels.yaml  operators.yaml  policies.yaml  ports.yaml  routes.yaml  suppliers.yaml
notebooks/: exploratory_analysis.ipynb
scripts/: batch_run.py  build_world.py  generate_report.py  ingest_seed_materials.py  inject_shock.py  run_simulation.py
src/renewable_fuel_twin/: __init__.py  agents.py  config.py  exceptions.py  extraction.py  intervention.py  io_utils.py  market_engine.py  memory.py  metrics.py  model.py  personas.py  plotting.py  report_agent.py  scenario.py  schemas.py  seed_ingestion.py  types.py  world_builder.py
src/renewable_fuel_twin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agents.py  test_config.py  test_intervention.py  test_market_engine.py  test_memory.py  test_metrics.py  test_model.py  test_personas.py  test_report_agent.py  test_world_builder.py
